--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
   <section id="contact" class="contact-section section-gradient">
     <div class="container">
       <div class="section-header" data-aos="fade-up">
-        <h2 class="section-title">Contact Us</h2>
+        <h2 class="section-title"><a href="https://digitalprintingindah.com/contact-us/" style="color: inherit; text-decoration: none;">Contact Us</a></h2>
         <p class="section-subtitle">Get in touch for your printing needs</p>
       </div>
       
