--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </div>
           
           <p>
-            Perkembangan teknologi dunia digital yang semakin canggih disertai dengan persaingan bisnis yang ketat membuat pelanggan menuntut hasil cetakan yang cepat dan berkualitas. Kami, <strong>INDAH Digital Printing</strong>, adalah percetakan terbaik di Lippo Cikarang dan Cikarang Baru Jababeka yang siap memenuhi kebutuhan tersebut. 
+            Perkembangan teknologi dunia digital yang semakin canggih disertai dengan persaingan bisnis yang ketat membuat pelanggan menuntut hasil cetakan yang cepat dan berkualitas. Kami, <strong>INDAH Digital Printing</strong>, adalah percetakan terbaik di Lippo Cikarang dan Cikarang Baru Jababeka yang siap memenuhi kebutuhan tersebut 
           </p>
           <p>
             Dengan mesin teknologi tinggi dan tenaga kerja berpengalaman, kami menyediakan solusi lengkap untuk promosi dan percetakan, khususnya di wilayah Jababeka dan Lippo Cikarang.
