--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </div>
             <div class="info-content">
               <h3>Email</h3>
-              <p><a href="mailto:digitalprintingindah@gmail.com">digitalprintingindah@gmail.com</a></p>
+              <p><a href="mailto:indahdigitalcikarang@gmail.com">indahdigitalcikarang@gmail.com</a></p>
             </div>
           </div>
           
