--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             </div>
             <div class="info-content">
               <h3>Phone</h3>
-              <p><a href="tel:+6281586327090">+62 815-8632-7090</a></p>
+              <p><a href="https://wa.me/6281586327090">+62 815-8632-7090</a></p>
             </div>
           </div>
           
